cleanup of leaks and data races

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: stopp <stopp@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/11 16:08:36 by stopp             #+#    #+#              #
-#    Updated: 2024/07/06 18:20:36 by stopp            ###   ########.fr        #
+#    Updated: 2024/08/15 18:30:23 by stopp            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,20 +20,20 @@ BLUE := \033[0;34m
 NC := \033[0m
 
 # Flags
-CFLAGS  := -Wall -Werror -Wextra -g -I.
+CFLAGS  := -Wall -Werror -Wextra -I.
 
 # Directories
 SRC_DIR := src
 OBJ_DIR := obj
 # Source files
-SRCS    := main.c src/input_handling.c src/time_utils.c src/utils.c \
+SRCS    := src/main.c src/input_handling.c src/time_utils.c src/utils.c src/routine.c src/philo_setup.c
 # Object files
 OBJS    := $(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
 
 # Header file
 HEADER  := philosophers.h
 
-MESSAGE := "\n$(BLUE)$(NAME) built successfully!$(NC)\n"
+MESSAGE := "\n$(GREEN)$(NAME) built successfully!$(NC)\n"
 
 # Project build rule
 all: $(OBJ_DIR) $(NAME) $(HEADER)
